@@ -6,6 +6,10 @@
  * added head_request function to return if the named file is the same as the remote file
  * updated is_excluded, to continue loop if regex compile fails
  * return dep failure if one of the deps is excluded
+ * added is_excluded check before adding explicit package to upgrade (allowing name and
+   version to be checked, instead of just the name during the initial upgrade check)
+   This is useful for excluding versions that contain pre or beta with a regex in the
+   exclude such as: [0-9\_\.\-]{1}pre[0-9\-\.\-]{1} or [0-9\_\.\-]{1}beta[0-9\-\.\-]{1}
 
 0.9.7 Nov 03, 2003
  * parse package require/dep from PACKAGES.TXT
